tests/baselines/reference/forwardRefInClassProperties.errors.txt
tests/cases/compiler/forwardRefInClassProperties.ts(3,15): error TS2448: Block-scoped variable '_a' used before its declaration.
tests/cases/compiler/forwardRefInClassProperties.ts(6,22): error TS2448: Block-scoped variable '_A' used before its declaration.
tests/cases/compiler/forwardRefInClassProperties.ts(11,17): error TS2448: Block-scoped variable 'b' used before its declaration.


==== tests/cases/compiler/forwardRefInClassProperties.ts (3 errors) ====
    class Test
    {
        _b = this._a; // undefined, no error/warning
                  ~~
!!! error TS2448: Block-scoped variable '_a' used before its declaration.
        _a = 3;
    
        static _B = Test._A; // undefined, no error/warning
                         ~~
!!! error TS2448: Block-scoped variable '_A' used before its declaration.
        static _A = 3;
    
        method()
        {
            let a = b; // Block-scoped variable 'b' used before its declaration
                    ~
!!! error TS2448: Block-scoped variable 'b' used before its declaration.
            let b = 3;
        }
    }
    